--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
-
-
+        implementation 'com.google.zxing:core:3.2.1'
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
 
 
     testImplementation 'junit:junit:4.12'
